--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello Worldgit</h1>
-    <h2>my name is abdullah</h2>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>نموذج سيرة ذاتية باللغة العربية</title>
+    </head>
+<body style="background-color: #ffdb88;width: 1000px;height: 1500px;">
+<img src="c:\Users\bg\Pictures\Saved Pictures\عبدالله.jpg" alt="Abdullah" class="center" style="
+margin-top: 100px;
+margin-left: 420px;
+padding-block: 20px;
+color: red;
+font-size: 2.5em;
+width: 200px;
+">
+<h1 style="
+font-size: 3.5em;
+text-align: center;
+">Abdullah Elsayed</h1>
+<h2 style="
+font-size: 1.5em;
+text-align: center;
+">طالب بكلية اللغات والترجمة . جامعة اللأزهر</h2>
+<h2 style="
+font-size: 2em;
+text-align: right;
+margin-top: 50px;
+color: red;
+margin-right: 40px;
+">:الدراسة *</h2>
+<ol lang="ar" dir="rtl"
+style="
+font-size: 1.5em;
+margin-right: 50px;
+margin-top: 30px;
+"><li><p>يدرس لغة ألمانية في  <a href="https://www.facebook.com/DKWAKADEMIE?mibextid=9R9pXO"target="_blank">DKW / Akademie</a></p></li>
+<li><p>يدرس في <a href="https://www.facebook.com/sisd.azhar?mibextid=9R9pXO"target="-blank">Sektion für islamische Studien in Deutsch - SISD</a></p></li>
+<li><p>حصل علي   شهادة إتمام الدراسة الثانوية الأزهرية (2021/2022) <p></li>
+ <li><p>درس في <a href="https://www.facebook.com/profile.php?id=100057493538269&mibextid=9R9pXO"target="_blank">معهد العلوم الاسلامية - قطاع المعاهد الأزهرية </a></p></li>
+</ol>
+<h2 style="
+font-size: 2em;
+text-align: right;
+margin-top: 50px;
+color: red; 
+margin-right: 40px;
+">:الاقامة *</h2>
+<ul lang="ar" dir="rtl"
+style="
+font-size: 1.5em;
+margin-right: 50px;
+margin-top: 30px;
+"><li><p>يقيم في <a href="https://maps.app.goo.gl/ou7sa5H8bvcGtWwc8"target="_blank">القاهرة</a> </p></li>
+<li><p>من <a href="https://maps.app.goo.gl/pfRsCKAmedvn7Bb17"target="_blank">المنصورة</a> </p></li>
+</ul>
+<h2 style="
+font-size: 2em;
+text-align: right;
+margin-top: 50px;
+color: red; 
+margin-right: 40px;
+">:التفاصيل الشخصية *</h2>
+<ul lang="ar" dir="rtl"
+style="
+font-size: 1.5em;
+margin-right: 50px;
+margin-top: 30px;
+"><li><p> الحالة الإجتماعية: أعزب</p></li>
+<li><p> تاريخ الميلاد: 25/12/2004</p></li>
+</ul>
+</ul>
+<h2 style="
+font-size: 2em;
+text-align: right;
+margin-top: 50px;
+color: red; 
+margin-right: 40px;
+">:معلومات الإتصال *</h2>
+<ul lang="ar" dir="rtl"
+style="
+font-size: 1.5em;
+margin-right: 50px;
+margin-top: 30px;
+">
+<li><p>واتس: 01093199508</p></li>
+<li><p>فيسبوك : <a href="https://www.facebook.com/profile.php?id=100085843040562&mibextid=9R9pXO"target="_blank">عبدالله الطنطاوي</a> </p></li>
+</ul>
 </html>
+</body>
