--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>نموذج سيرة ذاتية باللغة العربية</title>
     </head>
 <body style="background-color: #ffdb88;width: 1000px;height: 1500px;">
-<img src="c:\Users\bg\Pictures\Saved Pictures\عبدالله.jpg" alt="Abdullah" class="center" style="
+<img src="https://1drv.ms/i/s!AlBIaIW786-CghXzkUOIlShQ4prX?e=EOtpMj" alt="Abdullah" class="center" style="
 margin-top: 100px;
 margin-left: 420px;
 padding-block: 20px;
