--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>نموذج سيرة ذاتية باللغة العربية</title>
     </head>
 <body style="background-color: #ffdb88;width: 1000px;height: 1500px;">
-<img src="https://1drv.ms/i/s!AlBIaIW786-CghXzkUOIlShQ4prX?e=EOtpMj" alt="Abdullah" class="center" style="
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHNaMsR2w2aNTpbQEX0SnORqOYJBu7uuLlKoRm9iQFQHw8COa-gI53EAU&s=10" alt="Abdullah" class="center" style="
 margin-top: 100px;
 margin-left: 420px;
 padding-block: 20px;
