--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            *{
+                /* margin: 0;
+                padding: 0;
+                height: 1200px; */
+            }
+            .navbar{
+                background-color: #dbcd9f;
+                overflow: hidden;
+                padding: 20px;
+                height: 30px;
+            }
+            .navbar a {
+                color: #fdf9f9;
+                font-size: 20px;
+                text-decoration: none;
+                padding: 20px;
+            }
+        </style>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>نموذج سيرة ذاتية باللغة العربية</title>
     </head>
 <body style="background-color: #ffdb88;width: 1000px;height: 1500px;">
+    <div class="navbar">
+        <a href="index.html"class="active">Home</a>
+        <a href="project.html">Projects </a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html" class="right">Contact Me</a>
+    </div>
+    <div class="section1">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHNaMsR2w2aNTpbQEX0SnORqOYJBu7uuLlKoRm9iQFQHw8COa-gI53EAU&s=10" alt="Abdullah" class="center" style="
 margin-top: 100px;
 margin-left: 420px;
@@ -18,6 +44,7 @@ width: 200px;
 font-size: 3.5em;
 text-align: center;
 ">Abdullah Elsayed</h1>
+</div>
 <h2 style="
 font-size: 1.5em;
 text-align: center;
